--- a/public/index.html
+++ b/public/index.html
@@ -2,5 +2,7 @@
 <h2>HTML Instant : Real-Time HTML Editor!</h2>
 <body>
 <h2>GIT commands modified second time</h2>
+<h3>GIT commands modified second time</h3>
+<h4>GIT commands modified second time</h4>
 </body>
 </html>
