--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
 <h2>HTML Instant : Real-Time HTML Editor!</h2>
 <body>
+<h1>GIT commands modified second time</h1>
 <h2>GIT commands modified second time</h2>
 <h3>GIT commands modified second time</h3>
 <h4>GIT commands modified second time</h4>
