--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,8 @@
+
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="css/app.css">
+</head>
 <h2>HTML Instant : Real-Time HTML Editor!</h2>
 <body>
 <h1>GIT commands modified second time</h1>
